# colcon-sanitizer-reports

./: README.md  README.rst  azure-pipelines.yml  requirements.txt  setup.cfg
colcon_sanitizer_reports/: __init__.py  _sanitizer_section.py  _sanitizer_section_part.py  _sanitizer_section_part_stack_trace.py  sanitizer_log_parser.py  xml_output_generator.py
colcon_sanitizer_reports/event_handlers/: __init__.py  asan_report.py  sanitizer_report.py  tsan_report.py
examples/: test_tsan_xml_report.xml
test/: test_event_handler_sanitizer_report.py  test_flake8.py  test_sanitizer_log_parser.py  test_xml_output_generator.py
test/resources/data_race_and_lock_order_inversion_interleaved_output/: expected_output.csv  expected_output.xml
test/resources/data_race_different_keys/: expected_output.csv  expected_output.xml
test/resources/detected_memory_leaks_multiple_subsections_direct_and_indirect_leaks/: expected_output.csv  expected_output.xml
test/resources/lock_order_inversion_same_key/: expected_output.csv  expected_output.xml
test/resources/no_errors/: expected_output.csv  expected_output.xml
test/resources/segv/: expected_output.csv  expected_output.xml
utilities/: xml_to_csv_parser.py
