[metadata]
name = colcon-sanitizer-reports
version = attr: colcon_sanitizer_reports.__version__
url = https://colcon.readthedocs.io
maintainer = Steven! Ragnarök
maintainer_email = steven@openrobotics.org
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to extract reports from ASan and TSan output.
long_description = file: README.rst
keywords = colcon

[options.entry_points]
colcon_core.event_handler =
    asan_report = colcon_sanitizer_reports.event_handlers.asan_report:ASanReportEventHandler
    tsan_report = colcon_sanitizer_reports.event_handlers.tsan_report:TSanReportEventHandler

[flake8]
import-order-style = google
