[metadata]
name = colcon-sanitizer-reports
version = attr: colcon_sanitizer_reports.__version__
url = https://colcon.readthedocs.io
maintainer = Steven! Ragnarök
maintainer_email = steven@openrobotics.org
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to extract reports from ASan and TSan output.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
    colcon-core>=0.3.15
    colcon-output>=0.2.3
packages = find:
python_requires = >=3.5
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  mock
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
  pytest-asyncio

[options.entry_points]
colcon_core.event_handler =
    sanitizer_report = colcon_sanitizer_reports.event_handlers.sanitizer_report:SanitizerReportEventHandler

[flake8]
import-order-style = google
max-line-length = 100

[mypy-flake8.*]
ignore_missing_imports = True

[mypy-colcon_core.*]
ignore_missing_imports = True

[mypy-colcon_output.*]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-setuptools]
ignore_missing_imports = True
